--- a/frontend/README
+++ b/frontend/README
@@ -1,7 +1,15 @@
+Install
+
 sudo gem install bundler
 
+sudo apt-get install ruby1.8-dev
+sudo apt-get install libxml2-dev
 sudo apt-get install libxslt-dev
 sudo apt-get install libsqlite3-dev
 sudo apt-get install libopenssl-ruby
 
 bundle install
+
+Run
+
+bin/merb => at localhost:4000
